<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:elevation="5dp"-->
<!--    app:cardBackgroundColor="@color/white"-->
<!--    app:cardCornerRadius="5dp"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:orientation="vertical">-->
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/restaurantImage"
            android:layout_width="370dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="8dp"
            android:src="@drawable/burger" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="170dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"
                android:text="@string/restaurant_name"
                android:textColor="@color/dark_greenish_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:elevation="0dp"
                android:layout_gravity="center_vertical|right"
                android:orientation="horizontal"
                android:layout_marginStart="190dp"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|start"
                    android:fontFamily="@font/average_sans"
                    android:letterSpacing="0.05"
                    android:text="@string/_5_0"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="end"
                    android:paddingEnd="2dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/review_white" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="195dp">
            <TextView
                android:id="@+id/popularFoodItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burger"
                android:layout_marginStart="12dp"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/blue_grey"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:src="@drawable/circle" />
            <TextView
                android:id="@+id/popularFoodItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="French Fries"
                android:layout_marginStart="12dp"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/blue_grey"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:src="@drawable/circle" />
            <TextView
                android:id="@+id/pricingForOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100_for_one"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:textColor="@color/blue_grey"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="215dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"

                android:src="@drawable/stopwatch" />
            <TextView
                android:id="@+id/distanceFromUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_40_50_min"
                android:layout_marginStart="2dp"
                android:layout_gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="@color/blue_grey"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"

                android:src="@drawable/circle" />
            <TextView
                android:id="@+id/distanceInKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15_5km"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="@color/blue_grey"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



<!--</androidx.cardview.widget.CardView>-->