<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RestaurantDetailsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back_button_charcoal" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="180dp"
            android:src="@drawable/search" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/like_charcoal" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/share_arrow" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/three_dots" />


    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="657dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
            android:id="@+id/restaurantName_rd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/charcoal_black"
            android:text="Restaurant Name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/average_sans"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/popularFoodItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burger"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/blue_grey"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:src="@drawable/circle" />
            <TextView
                android:id="@+id/popularFoodItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pizza"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/blue_grey"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"/>


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">
        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:elevation="0dp"
            android:layout_gravity="center_vertical|right"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|start"
                android:fontFamily="@font/average_sans"
                android:letterSpacing="0.05"
                android:text="@string/_5_0"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="end"
                android:paddingEnd="2dp"
                android:paddingTop="5dp"
                android:src="@drawable/review_white" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 ratings"
            android:layout_marginStart="5dp"
            android:textStyle="normal"
            android:textColor="@color/charcoal_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_margin="2dp"
            android:layout_height="30dp"
            android:elevation="0dp"
            android:outlineAmbientShadowColor="@color/light_gray"
            android:layout_gravity="center_vertical|right"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/white_smoke"
            app:cardCornerRadius="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/stopwatch" />
                <TextView
                    android:id="@+id/distanceFromUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_40_50_min"
                    android:layout_marginStart="2dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="@color/blue_grey"
                    android:fontFamily="@font/average_sans"
                    android:letterSpacing="0.05"/>
                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/circle" />
                <TextView
                    android:id="@+id/distanceInKm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_15_5km"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="@color/blue_grey"
                    android:fontFamily="@font/average_sans"
                    android:letterSpacing="0.05"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/discountItem_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="1"
            android:orientation="horizontal"
            app:spanCount="1"
            tools:itemCount="1"
            tools:listitem="@layout/discount_rv" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filtersItem_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:spanCount="1"
            tools:itemCount="1"
            tools:listitem="@layout/filters_rv" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>